--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^5.0.0-beta.2",
     "mongoose": "^8.2.2",
     "nanoid": "^5.0.6",
