--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^5.0.0-beta.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "nanoid": "^5.0.6",
     "nodemon": "^3.1.0",
